--- a/src/select.module.css
+++ b/src/select.module.css
@@ -17,6 +17,9 @@
 
 .value {
   flex-grow: 1;
+  display: flex;
+  gap: 0.5em;
+  flex-wrap: wrap;
 }
 
 .clear-btn {
@@ -28,6 +31,7 @@
   padding: 0;
   font-size: 1.25em;
 }
+
 .clear-btn:focus,
 .clear-btn:hover {
   color: #333;
@@ -57,7 +61,7 @@
   border-radius: 0.25em;
   width: 100%;
   left: 0;
-  top: calc(100%+0.25em);
+  top: calc(100% + 0.25em);
   background-color: white;
   z-index: 100;
 }
@@ -66,16 +70,44 @@
   display: block;
 }
 
-.option{
-    padding: .25em .5em;
-    cursor: pointer;
+.option {
+  padding: 0.25em 0.5em;
+  cursor: pointer;
 }
 
-.option.highlighted{
-    background-color: hsl(200, 100%, 50%);
-    color: white;
+.option.selected {
+  background-color: hsl(200, 100%, 70%);
 }
 
-.option.selected{
-    background-color: hsl(200, 100%, 70%);
+.option.highlighted {
+  background-color: hsl(200, 100%, 50%);
+  color: white;
+}
+
+.option-badge {
+  display: flex;
+  align-items: center;
+  border: 0.05em solid #777;
+  border-radius: 0.25em;
+  padding: 0.15em 0.25em;
+  gap: 0.25em;
+  cursor: pointer;
+  background: none;
+  outline: none;
+}
+
+.option-badge:hover,
+.option-badge:focus {
+  background-color: hsl(0, 100%, 90%);
+  border-color: hsl(0, 100%, 50%);
+}
+
+.option-badge:hover > .remove-btn,
+.option-badge:focus > .remove-btn {
+  color: hsl(0, 100%, 50%);
+}
+
+.option-badge > .remove-btn {
+  font-size: 1.25em;
+  color: #777;
 }
